datafusion-cli/tests/snapshots/cli_with_unbounded_memory_pool@default.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--maxrows"
    - "10"
    - "--command"
    - "select * from generate_series(1,500000) as t1(v1) order by v1;"
---
success: true
exit_code: 0
----- stdout -----
[CLI_VERSION]
+----+
| v1 |
+----+
| 1  |
| 2  |
| 3  |
| 4  |
| 5  |
| 6  |
| 7  |
| 8  |
| 9  |
| 10 |
| .  |
| .  |
| .  |
+----+
500000 row(s) fetched. (First 10 displayed. Use --maxrows to adjust)
[ELAPSED]


----- stderr -----
